# ditto

./: .gitignore  Cargo.toml  README.md
crates/ditto-cli/: Cargo.toml
crates/ditto-cli/src/: main.rs
crates/ditto-core/: Cargo.toml  README.md
crates/ditto-core/src/: blob.rs  canonical.rs  error.rs  graph.rs  id.rs  lib.rs  reflective.rs  signing.rs  skill.rs  tmr.rs  types.rs
crates/ditto-mcp/: Cargo.toml
crates/ditto-mcp/src/: lib.rs  server.rs
crates/ditto-memory/: Cargo.toml  README.md
crates/ditto-memory/src/: contradiction.rs  controller.rs  embedder.rs  extractor.rs  in_memory.rs  lib.rs  llm_extractor.rs  llm_reranker.rs  long_sleep.rs  policy.rs  reranker.rs  search.rs  storage.rs  working.rs
crates/ditto-models/: Cargo.toml
crates/ditto-models/src/: auth.rs  capabilities.rs  cost.rs  error.rs  lib.rs  model.rs  provider.rs  stream.rs  tools.rs
crates/ditto-models/src/auth/: subscription.rs
crates/ditto-models/src/provider/: openrouter.rs
crates/ditto-models/tests/: openrouter_request.rs  openrouter_sse.rs  tool_projection.rs  types_compile.rs
crates/ditto-render/: Cargo.toml  README.md
crates/ditto-render/src/: error.rs  filesystem.rs  job.rs  lib.rs  manifest.rs  markdown.rs
crates/ditto-render/tests/: render.rs
crates/ditto-storage-postgres/: Cargo.toml  README.md
crates/ditto-storage-postgres/src/: lib.rs
docs/architecture/: importer.md  memory.md  models.md  multi-tenant.md
docs/research/: memory.md  models.md
docs/research/memory/: arxiv.md  biology.md  landscape.md  production.md  trending.md
docs/research/models/: community.md  landscape.md  oauth.md
eval/: LOCOMO_CAMPAIGN_REPORT.md  README.md  diag_kg_leg.py  pyproject.toml
eval/ditto_eval/: __init__.py  cli.py  llm.py  query_expansion.py  runner.py  types.py
eval/ditto_eval/backends/: __init__.py  base.py  ditto.py  mem0_backend.py  stub.py
eval/ditto_eval/benchmarks/: __init__.py  base.py  locomo.py  locomo_retrieval.py  provenance.py
eval/fixtures/provenance/: v0.yaml
eval/results/: ditto-provenance-bench_ditto_20260514T145244Z.json  ditto-provenance-bench_ditto_20260514T162704Z.json  ditto-provenance-bench_stub_20260514T145310Z.json
eval/tests/: test_stub_backend.py
migrations/: 20260514120000_initial_schema.sql  20260514120001_nc_graph.sql  20260514120002_blob_store.sql  20260514120003_procedural.sql  20260514120004_reflective.sql  20260514120005_pgvector.sql  20260514120006_labile_shadow.sql  20260514120007_salience.sql  20260514120008_tmr_cue.sql
results/: ditto-provenance-bench_ditto_20260514T163405Z.json  ditto-provenance-bench_ditto_20260514T163946Z.json  ditto-provenance-bench_ditto_20260514T170104Z.json
