[package]
name = "ditto-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for Ditto. v0: smoke commands against an in-memory or Postgres backend."

[[bin]]
name = "ditto"
path = "src/main.rs"

[dependencies]
ditto-core = { workspace = true }
ditto-mcp = { workspace = true }
ditto-memory = { workspace = true }
ditto-render = { workspace = true }
ditto-storage-postgres = { workspace = true }

anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
