[package]
name = "ditto-models"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Provider, capability, tool projection, streaming, and cost types for Ditto's model routing layer."

[dependencies]
ditto-core = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
async-stream = "0.3"
bytes = "1"
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
futures-util = { version = "0.3", default-features = false, features = ["std"] }
tokio = { workspace = true }
